# ChangeLog for dev-lang/polyml
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/polyml/ChangeLog,v 1.4 2012/01/08 10:24:08 gienah Exp $

*polyml-5.4.1 (08 Jan 2012)

  08 Jan 2012; Mark Wright <gienah@gentoo.org> +polyml-5.4.1.ebuild,
  +files/polyml-5.4.1-asm.patch, metadata.xml:
  Bump to 5.4.1 fixes bug #296797 thanks Mr. Anderson and René 'Necoro'
  Neumann. Fix executable stacks in 2 of 3 files bug #256679 by Mr. Anderson.
  Add portable use flag.

  11 Jan 2009; Markus Meier <maekke@gentoo.org> polyml-5.2.1.ebuild:
  add ~x86, bug #254097

*polyml-5.2.1 (30 Dec 2008)

  30 Dec 2008; Marijn Schouten <hkBst@gentoo.org> +metadata.xml,
  +polyml-5.2.1.ebuild:
  Initial entry (bug 35548) thanks to Paulo Jorge de Oliveira Cantante de
  Matos <pocmatos@gmail.com>, Martin von Gagern <Martin.vGagern@gmx.net> and
  Unknown <chkno@chkno.net>
