@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/polyml
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/polyml/ChangeLog,v 1.4 2012/01/08 10:24:08 gienah Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/polyml/ChangeLog,v 1.5 2012/01/08 15:25:53 gienah Exp $
+
+  08 Jan 2012; Mark Wright <gienah@gentoo.org> polyml-5.4.1.ebuild:
+  Thanks to few_ and xarthisius for reviewing, remove econf repetition, - on
+  use flag, src_compile and src_install were just like defaults
 
 *polyml-5.4.1 (08 Jan 2012)
 
